# Husky_Robot_Navigation

./: README  README.md  maze.sdf
Models/concretewall1/: model.config  model.sdf
Models/concretewall1/meshes/: concretewall1.dae
Models/future_lamp/: CMakeLists.txt  model.config  model.sdf  package.xml
Models/future_lamp/meshes/: future_lamp-coll.dae  future_lamp.dae  future_lamp_emission.dae
Models/husky_model/: CMakeLists.txt  model.config  package.xml
Models/husky_model/launch/: husky.launch
Models/husky_model/meshes/: base_link.dae  body.dae  bumper.dae  eye_vision_camera.dae  top_plate.dae  user_rail.dae  wheel.dae
Models/large_concrete_ground/: model.config  model.sdf
Models/large_concrete_ground/meshes/: largeconcreteground.dae
Models/whitepanelwall/: model.config  model.sdf
Models/whitepanelwall/meshes/: whitepanelwall.dae
ROS_Plugins/catkin_ws/src/husky_gazebo_plugins/: CMakeLists.txt  package.xml
ROS_Plugins/catkin_ws/src/husky_gazebo_plugins/src/: husky_plugin.cpp
ROS_Plugins/catkin_ws/src/husky_gazebo_plugins/srv/: GetHuskyJointStates.srv  GetHuskyOdometry.srv  SetHuskyCmdVel.srv  SetHuskyWheelSpeeds.srv
ROS_Plugins/catkin_ws/src/robot_control/: CMakeLists.txt  package.xml
ROS_Plugins/catkin_ws/src/robot_control/nodes/: pid_controller.py
ROS_Plugins/catkin_ws/src/robot_vision/: CMakeLists.txt  package.xml
ROS_Plugins/catkin_ws/src/robot_vision/msg/: Vision.msg
sm/: demo_husky_switch_lights.exd  lights_switcher.py  screen_switcher.py
sm/smach_states/: _RobotMonitorState.py  __init__.py
(+2 files in other folders)
